Changing to JavaFX